--- a/user-console/job-manager/chart/templates/server.deploy.yaml.tmpl
+++ b/user-console/job-manager/chart/templates/server.deploy.yaml.tmpl
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: job-manager-server
-        image: {{ .Values.server.image }}
+        image: {{ .Values.server.image.registry }}/{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}
         command: ["/app/job-manager-server"]
         args:
           - "--show-error-trace"
@@ -54,7 +54,7 @@ spec:
         - --oidc-issuer-url={{ .Values.network.domain.auth }}/auth/realms/t9k-realm
         - --pep-config=/t9kconfig/pep-config.yaml
         - --pass-authorization-header
-        image: {{ .Values.authorization.pepProxy.image }}
+        image: {{ .Values.authorization.pepProxy.image.registry }}/{{ .Values.authorization.pepProxy.image.repository }}:{{ .Values.authorization.pepProxy.image.tag }}
         imagePullPolicy: {{ .Values.server.imagePullPolicy }}
         name: pep-proxy
         ports:
