--- a/user-console/autotune/chart/templates/web.deploy.yaml.tmpl
+++ b/user-console/autotune/chart/templates/web.deploy.yaml.tmpl
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: autotune
-        image: {{ .Values.image }}
+        image: {{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}
         ports:
           - name: http
             containerPort: 8080
@@ -42,7 +42,7 @@ spec:
         - --oidc-issuer-url={{ .Values.network.domain.auth }}/auth/realms/t9k-realm
         - --security-server-address={{ .Values.network.domain.home }}/t9k/security/server
         - --pep-config=/t9kconfig/pep-config.yaml
-        image: {{ .Values.authorization.pepProxy.image }}
+        image: {{ .Values.authorization.pepProxy.image.registry }}/{{ .Values.authorization.pepProxy.image.repository }}:{{ .Values.authorization.pepProxy.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         name: pep-proxy
         ports:
