Update job-manager app: add switch to disable t9k scheduler

--- a/user-console/job-manager/chart/templates/web.cm.yaml.tmpl
+++ b/user-console/job-manager/chart/templates/web.cm.yaml.tmpl
@@ -6,7 +6,8 @@ data:
       "k8sResourceServer": "/t9k/k8s-resource/server",
       "namespace": "{{ .Release.Namespace }}",
       "gpuExtendedResources": {{ .Values.cluster.extendedResources.gpu | toJson }},
-      "appVersion": "{{ .Chart.AppVersion }}"
+      "appVersion": "{{ .Chart.AppVersion }}",
+      "useT9kScheduler": {{ .Values.t9kScheduler.enabled }}
     }
 kind: ConfigMap
 metadata:
